# perf-test-webassembly

./: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  package.json  webpack.config.js
src/: lib.rs  utils.rs
