[package]
name = "perf-test"
version = "0.1.0"
authors = ["Simone Dutto <simonedutto8@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "console"
]

[profile.release]
debug = true
lto = true

